# mental_health

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
charts/mental_health/: Chart.yaml  values.yaml
local_infra/: .terraform.lock.hcl  main.tf  variables.tf
migrations/: env.py
migrations/versions/: 168594846ed1_added_foreign_key_to_conversation_.py  168ecf6b38d2_new_status_field_on_conversation_model.py  1ee6ddced4f0_initial_imigration.py  20d86fada83e_updated_outbox_table.py  311c62361fba_upaded_conversation_event.py  492c4c2eda43_outbox_has_reference_to_events_table.py  50ede0b32c1d_add_default_value_to_status_columns.py  775b35becee5_initial_revision.py  8f0be99713e3_updated_models.py  a553303195c6_dropped_foreign_key_from_conversation_.py  c1d799f56b8b_outbox_table.py  cc2476e2c13d_added_risk_analysis_model.py  d7adb79f16a5_apply_unique_constraint.py  e3607eb2e491_fix_models.py  e9a7a8181c20_initial_user.py  e9d62c30d3c3_updated_timestamp_column.py  f62c11a4d127_initial_migration.py
prompts/: risk_analyzer.yaml
src/: main.py  outbox_processor.py  settings.py
src/aggregates/: conversation.py
src/api/: conversation.py  dependencies.py  user.py
src/api/schemas/: conversation.py
src/command/: conversation.py
src/dtos/: conversation.py
src/genai/: risk_analyzer.py
src/projector/: conversation.py
src/query/: conversation.py
src/shared/: event_store.py
tests/: conftest.py  test_conversation.py  test_conversation_aggregate.py  test_outbox.py  test_user.py
(+29 files in other folders)
