[tool.poetry]
name = "mental-health"
version = "0.1.0"
description = "Handle conversation between patient and AI and assess risks involved in conversation"
authors = ["Vinicius Silva <vinicius.lopes.silva89@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
uvicorn = "^0.40.0"
python-dotenv = "^1.2.1"
google-genai = "^1.57.0"
pydantic-settings = "^2.12.0"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.poetry.group.tests.dependencies]
pytest = "^9.0.2"
pgmock = "^1.3.7"


[tool.poetry.group.dev.dependencies]
alembic = "^1.17.2"
pre-commit = "^4.5.1"


[tool.poetry.group.test.dependencies]
testcontainers = "^4.14.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
